--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,11 @@ numpy==1.24.3
 python-multipart==0.0.6
 
 # 其他依赖
-streamlit==1.22.0
+streamlit==1.31.0
 langdetect==1.0.9
 python-jose[cryptography]==3.3.0
 bcrypt==4.1.2
 sentencepiece==0.1.99
-loguru==0.6.0 
+loguru==0.6.0
+tornado==6.3.3
+protobuf==3.20.3 
